--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "matcha",
+  "name": "webtag.fr",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
+    "docker.io": "*",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
@@ -14,6 +15,6 @@
     "mongoose": "^4.10.4",
     "morgan": "~1.8.1",
     "nodemon": "^1.11.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
   }
 }
