--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "mongoose": "^4.10.4",
     "morgan": "~1.8.1",
     "nodemon": "^1.11.0",
-    "serve-favicon": "~2.4.2",
-  }
+    "serve-favicon": "~2.4.2"
+}
 }
